--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.7.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/facebook-nodejs-business-sdk": "^18.0.0",
     "@types/jest": "^29.5.11",
     "@types/mysql": "^2.15.24",
     "@types/node": "^16.18.68",
