--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "devDependencies": {
     "@prisma/client": "^5.7.0",
     "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
-    "@types/facebook-nodejs-business-sdk": "^18.0.0",
     "@types/jest": "^29.5.11",
     "@types/mysql": "^2.15.24",
     "@types/node": "^16.18.68",
@@ -41,6 +41,7 @@
     "cors": "^2.8.5",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "zod": "^3.22.4"
   }
 }
